wip updating scheduler to be inline with new subarray_n changes, updated styling to material 0.9 buttons

--- a/app/app.less
+++ b/app/app.less
@@ -516,6 +516,9 @@ md-toast {
         margin: 0;
         md-select-label {
             margin: 4px;
+            span {
+                line-height: normal !important;
+            }
         }
     }
 }
@@ -634,7 +637,7 @@ md-toast {
 }
 
 .manual-color {
-    color: #2196F3;
+    color: #1E88E5;
 }
 
 .maintenance-color {
