--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -45,7 +45,7 @@
 }
 
 .schedule-draft-data-list {
-//    direction: rtl;
+    //    direction: rtl;
     z-index: 0;
     position: relative;
     padding: 0;
@@ -119,10 +119,10 @@
     min-width: 200px;
     border-bottom: 1px solid darken(@item-border-bottom, 10%);
     overflow: hidden;
-//    background-color: @item-bg;
+    //    background-color: @item-bg;
     &:hover {
-//        background-color: darken(@item-bg, 5%);
-        background-color: rgba(158,158,158,0.1)
+        //        background-color: darken(@item-bg, 5%);
+        background-color: rgba(158, 158, 158, 0.1)
     }
 }
 
@@ -130,15 +130,15 @@
     position: relative;
     height: 38px;
     max-height: 38px;
-//    padding: 4px;
+    //    padding: 4px;
     font-size: 12px;
-//    min-width: 800px;
+    //    min-width: 800px;
     white-space: nowrap;
     direction: ltr;
     border-bottom: 1px solid #9E9E9E;
     overflow: hidden;
     &:hover {
-        background-color: rgba(158,158,158,0.1)
+        background-color: rgba(158, 158, 158, 0.1)
     }
 }
 
@@ -202,16 +202,25 @@
     background: #B3E5FC !important;
     box-shadow: 1px 2px 10px 0 #393939;
     border-bottom: 1px solid transparent;
+    color: #333333;
 }
 
 .schedule-row-executing {
-    background: #66BB6A !important;
+    background: #4CAF50 !important;
+    color: #333333;
+    .manual-color {
+        color: #1565C0;
+    }
 }
 
 .schedule-row-executing-and-selected {
-    background: linear-gradient(to right, rgba(102, 187, 106, 1) 0%, rgba(102, 187, 106, 1) 25%, rgba(179, 229, 252, 0.52) 50%, rgba(179, 229, 252, 0.5) 51%, rgba(179, 229, 252, 1) 75%, rgba(179, 229, 252, 1) 100%);
+    background: linear-gradient(to right, rgba(78, 175, 80, 1) 0%, rgba(78, 175, 80, 1) 50%, rgba(179, 229, 252, 0.8) 50%, rgba(179, 229, 252, 1) 100%);
     box-shadow: 1px 2px 10px 0 #393939;
     border-bottom: 1px solid transparent;
+    color: #333333;
+    .manual-color {
+        color: #1565C0;
+    }
 }
 
 .grid-dropdown {
@@ -271,7 +280,7 @@
 }
 
 .highlight-script-window-background {
-//    background-color: #B3E5FC !important;
+    //    background-color: #B3E5FC !important;
 }
 
 .highlight-script-window {
@@ -281,7 +290,7 @@
 }
 
 .highlight-script-window-with-box-shadow {
-    border: 16px solid #B3E5FC;
+    border: 16px solid #B3E5FC !important;
     box-shadow: 0px 2px 40px 0 #000;
 }
 
@@ -292,7 +301,7 @@
 
 .schedule-block-script-window {
     padding: 0px;
-//    background-color: #ECEFF1;
+    //    background-color: #ECEFF1;
     height: 600px;
     overflow: auto;
 
@@ -301,7 +310,7 @@
         height: 100%;
         -webkit-box-sizing: border-box;
         box-sizing: border-box;
-        //        background-color: #ECEFF1;
+        background-color: transparent;
         padding: 8px;
         border: none;
         resize: none;
@@ -311,7 +320,7 @@
 .schedule-block-resource-window {
     height: 400px;
     padding: 0px;
-//    background-color: white;
+    //    background-color: white;
 }
 
 .schedule-block-list {
@@ -440,12 +449,12 @@
 
     &:hover {
         color: #212121;
-//        background: #e4e4e4;
+        //        background: #e4e4e4;
     }
 
     &:active {
         color: #212121;
-//        background: #dbdbdb;
+        //        background: #dbdbdb;
     }
 }
 
@@ -470,7 +479,7 @@
 }
 
 .subarray-container {
-//    min-width: 1000px;
+    //    min-width: 1000px;
     margin-bottom: 8px;
     min-height: 200px;
 }
