--- a/app/app.less
+++ b/app/app.less
@@ -41,17 +41,17 @@
 
 @font-face {
     font-family: 'Roboto';
-    src: url('../fonts/Roboto/Roboto-Regular.ttf') @ttf;
+    src: url('/fonts/Roboto/Roboto-Regular.ttf') @ttf;
 }
 .rb {font-family: 'Roboto';}
 @font-face {
     font-family: 'Roboto Black';
-    src: url('../fonts/Roboto/Roboto-Black.ttf') @ttf;
+    src: url('/fonts/Roboto/Roboto-Black.ttf') @ttf;
 }
 .rbB {font-family: 'Roboto Black';}
 @font-face {
     font-family: 'Roboto Light';
-    src: url('../fonts/Roboto/Roboto-Light.ttf') @ttf;
+    src: url('/fonts/Roboto/Roboto-Light.ttf') @ttf;
 }
 /* Required for Angular UI Bootstrap */
 .nav, .pagination, .carousel a {
@@ -125,7 +125,7 @@
 }
 
 body {
-    font-family: Roboto;
+    font-family: Roboto !important;
     min-width: @app-min-width;
     padding: 0 !important;
     overflow: hidden;
@@ -165,11 +165,11 @@ body {
 }
 
 md-sidenav {
-    background-color: inherit;;
+    background-color: inherit !important;
 }
 
 .menu-item {
-    font-family: Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif !important;
     cursor: pointer;
 //    color: #757575;
     height: 48px;
@@ -653,9 +653,9 @@ md-toast {
 }
 
 .mainbar-navbar-button {
-    padding: 0;
-    font-size: 30px;
-    height: 56px;
+    padding: 0 !important;
+    font-size: 30px !important;
+    height: 56px !important;
     margin: 4px !important;
 
     md-icon {
