--- a/app/app.less
+++ b/app/app.less
@@ -387,8 +387,8 @@ md-toast {
 }
 
 .list-subheader-title {
-    min-height: 30px;
-    max-height: 30px;
+//    min-height: 30px;
+//    max-height: 30px;
     width: 100%;
     padding: 2px;
     cursor: pointer;
@@ -479,17 +479,17 @@ md-toast {
 }
 
 .md-toolbar-tools-small {
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-    width: 100%;
-    height: 25px;
-    min-height: 25px;
-    max-height: 25px;
-    font-size: inherit;
-    font-weight: normal;
-    padding: 0 10px;
-    margin: 0;
+    display: flex !important;
+    align-items: center!important;
+    flex-direction: row!important;
+    width: 100%!important;
+    height: 25px!important;
+    min-height: 25px!important;
+    max-height: 25px!important;
+    font-size: inherit!important;
+    font-weight: normal!important;
+    padding: 0 10px!important;
+    margin: 0!important;
 }
 
 .md-toolbar-tools-medium {
