fixed alarm notification scrolling, better hide button styling

--- a/app/alarms/alarms.less
+++ b/app/alarms/alarms.less
@@ -11,11 +11,10 @@
     position: absolute;
     top: 57px;
     right: 0px;
+    bottom: 4px;
     overflow: auto;
     opacity: 0.9;
     z-index: 4;
-    height: 100%;
-    pointer-events: none;
 }
 
 .alarm-item-overlay {
@@ -258,7 +257,7 @@ ul {
 
 .alarm-badge {
     position: absolute;
-    right: 60px;
+    right: 0px;
     color: black;
     .avoid-clicks;
 }
