--- a/app/app.less
+++ b/app/app.less
@@ -15,6 +15,7 @@
 @import "widgets/gantt/gantt-widget";
 @import "health/health";
 @import "d3/d3";
+@import "sensor-list/sensor-list";
 
 /* Add Component LESS Above */
 
