wip - sensor list, changed resource and sensor separator to a '.' from a ':'

--- a/app/app.less
+++ b/app/app.less
@@ -709,3 +709,7 @@ md-option:not([selected]) {
 ::-webkit-scrollbar-thumb:window-inactive {
     background: rgba(158,158,158,0.4);
 }
+
+md-chips .md-chip {
+    background: rgba(224,224,224, 0.5) !important;
+}
