--- a/app/sensor-list/sensor-list.less
+++ b/app/sensor-list/sensor-list.less
@@ -16,26 +16,28 @@
             background-color: rgba(158, 158, 158, 0.1);
         }
 
-        .resource-sensor-name {
-            min-width: 250px;
-            max-width: 250px;
-            overflow: hidden;
-            text-overflow: ellipsis;
-        }
 
-        .resource-sensor-status-item {
-            margin-left: 4px;
-            margin-right: 4px;
-            min-width: 80px;
-        }
-
-        .resource-sensor-time-item {
-            margin-left: 4px;
-            margin-right: 4px;
-            min-width: 146px;
-        }
     }
 
+}
+
+.resource-sensor-name {
+    min-width: 250px;
+    max-width: 250px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.resource-sensor-status-item {
+    margin-left: 4px;
+    margin-right: 4px;
+    min-width: 80px;
+}
+
+.resource-sensor-time-item {
+    margin-left: 4px;
+    margin-right: 4px;
+    min-width: 138px;
 }
 
 .active-sensor-list-resource {
@@ -73,6 +75,7 @@
     height: 500px;
     width: 500px;
     overflow: hidden;
+    z-index: 2
 }
 
 .sensor-list-multi-line-chart {
