added resize convenience buttons to graph in sensor list

--- a/app/sensor-list/sensor-list.less
+++ b/app/sensor-list/sensor-list.less
@@ -75,7 +75,8 @@
     height: 500px;
     width: 500px;
     overflow: hidden;
-    z-index: 2
+    z-index: 2;
+    transition: width 0.15s, height 0.15s;
 }
 
 .sensor-list-multi-line-chart {
