fixed sensor list ordering, added config options for strategy types

--- a/app/app.less
+++ b/app/app.less
@@ -517,6 +517,7 @@ md-toast {
         margin: 0;
         md-select-label {
             margin: 4px;
+            padding-top: 10px;
             span {
                 line-height: normal !important;
             }
