numerous improvements and fixes for sensor graph functionality and styling

--- a/app/d3/d3.less
+++ b/app/d3/d3.less
@@ -8,7 +8,7 @@ text {
 
 rect {
     fill: none;
-    stroke: #fff;
+//    stroke: #fff;
     stroke-width: 2px;
 }
 
@@ -103,7 +103,6 @@ actions-button {
 }
 
 .brush .extent {
-    stroke: #fff;
     fill-opacity: .125;
     shape-rendering: crispEdges;
 }
