--- a/app/landing/landing.less
+++ b/app/landing/landing.less
@@ -32,8 +32,8 @@
     float: right;
     margin-left: 5px;
     margin-right: -5px;
-    margin-top: 16px;
-    color: grey;
+    margin-top: 19px;
+    color: #d3d3d3;
     cursor: pointer;
 
     &:hover {
@@ -54,6 +54,7 @@
         color: white;
 
         span {
+//            margin-right: 32px;
             i.fa {
                 color: white;
             }
@@ -69,4 +70,54 @@
             }
         }
     }
+}
+
+
+.glyphicon {
+    display: inline-block;
+    font-family: FontAwesome;
+    font-style: normal;
+    font-weight: normal;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    color: #d3d3d3;
+    &:hover {
+        color: darkgray;
+    }
+}
+
+.glyphicon-edit:before {
+    content: "\f044";
+}
+
+.glyphicon-plus-sign:before {
+    content: "\f067";
+}
+
+.glyphicon-cog:before {
+    content: "\f013";
+}
+
+.glyphicon-save:before {
+    content: "\f0c7";
+}
+
+.glyphicon-repeat:before {
+    content: "\f044";
+}
+
+.glyphicon-move:before {
+    content: "\f0b2";
+}
+
+.glyphicon-minus:before {
+    content: "\f068";
+}
+
+.glyphicon-plus:before {
+    content: "\f067";
+}
+
+.glyphicon-remove:before {
+    content: "\f068";
 }
