--- a/app/sensor-graph/sensor-graph.less
+++ b/app/sensor-graph/sensor-graph.less
@@ -303,3 +303,33 @@ multi-line-chart {
         -webkit-transform: scale(1.0);
     }
 }
+
+.sensor-graph-selection-options-menu {
+    left: 332px;
+    top: 103px;
+    position: fixed;
+    z-index: 1000;
+    border: 1px solid #f1f1f1;
+    border-radius: 4px;
+    background-color: white;
+    margin-top: 5px;
+    color: #333333;
+    md-list {
+        padding: 0;
+    }
+}
+
+.sensor-graph-options-menu {
+    right: 16px;
+    top: 172px;
+    position: fixed;
+    z-index: 1000;
+    border: 1px solid #f1f1f1;
+    border-radius: 4px;
+    background-color: white;
+    margin-top: 5px;
+    color: #333333;
+    md-list {
+        padding: 0;
+    }
+}
