--- a/app/app.less
+++ b/app/app.less
@@ -46,6 +46,7 @@
     font-family: 'Roboto';
     src: url('/fonts/Roboto/Roboto-Regular.ttf') @ttf;
 }
+
 .rb {font-family: 'Roboto';}
 @font-face {
     font-family: 'Roboto Black';
@@ -56,6 +57,7 @@
     font-family: 'Roboto Light';
     src: url('/fonts/Roboto/Roboto-Light.ttf') @ttf;
 }
+
 /* Required for Angular UI Bootstrap */
 .nav, .pagination, .carousel a {
     cursor: pointer;
@@ -68,6 +70,10 @@
 .md-select-menu-container.md-active md-select-menu > * {
     opacity: 1;
     transition: all 0.1s cubic-bezier(0.55, 0, 0.55, 0.2);
+}
+
+div[role="button"] {
+    cursor: auto;
 }
 
 .toolbar-collapse-button {
@@ -246,7 +252,7 @@ md-sidenav {
 }
 
 .panel-heading {
-    margin-top: 16px;
+    margin-top: 14px;
     margin-left: 16px;
     background: transparent !important;
     height: 0;
