added sensor graph options to sensor list

--- a/app/sensor-list/sensor-list.less
+++ b/app/sensor-list/sensor-list.less
@@ -120,3 +120,18 @@
         opacity: 1.0;
     }
 }
+
+.sensor-list-graph-options-menu {
+    right: 0px;
+    top: 46px;
+    position: absolute;
+    z-index: 1000;
+    border: 1px solid #f1f1f1;
+    border-radius: 4px;
+    background-color: white;
+    margin-top: 5px;
+    color: #333333;
+    md-list {
+        padding: 0;
+    }
+}
