--- a/app/health/health.less
+++ b/app/health/health.less
@@ -6,12 +6,14 @@
 }
 
 .unknown-child {
+    stroke: #fff;
     background-color: #9E9E9E;
     fill: #9E9E9E;
     rect {
         fill: #9E9E9E;
     }
     text {
+        stroke: transparent;
         fill: black;
         font-weight: bold;
     }
@@ -19,16 +21,19 @@
 
 .unknown-child-text {
     fill: black;
+    stroke: transparent;
     font-weight: bold;
 }
 
 .nominal-child {
     background-color: #4CAF50;
     fill: #4CAF50;
+    stroke: #fff;
     rect {
         fill: #4CAF50;
     }
     text {
+        stroke: transparent;
         fill: white;
         font-weight: bold;
     }
@@ -36,10 +41,12 @@
 
 .nominal-child-text {
     fill: white;
+    stroke: transparent;
     font-weight: bold;
 }
 
 .warn-child {
+    stroke: #fff;
     background-color: #FFC107;
     fill: #FFC107;
     rect {
@@ -47,6 +54,7 @@
     }
 
     text {
+        stroke: transparent;
         fill: black;
         font-weight: bold;
     }
@@ -54,17 +62,20 @@
 
 .warn-child-text {
     fill: black;
+    stroke: transparent;
     font-weight: bold;
 }
 
 .error-child {
     background-color: #F44336;
     fill: #F44336;
+    stroke: #fff;
     rect {
         fill: #F44336;
     }
 
     text {
+        stroke: transparent;
         fill: white;
         font-weight: bold;
     }
@@ -72,10 +83,12 @@
 
 .error-child-text {
     fill: white;
+    stroke: transparent;
     font-weight: bold;
 }
 
 .failure-child {
+    stroke: #fff;
     background-color: #3F51B5;
     fill: #3F51B5;
     rect {
@@ -83,6 +96,7 @@
     }
 
     text {
+        stroke: transparent;
         fill: white;
         font-weight: bold;
     }
@@ -90,10 +104,12 @@
 
 .failure-child-text {
     fill: white;
+    stroke: transparent;
     font-weight: bold;
 }
 
 .unreachable-child {
+    stroke: #fff;
     background-color: #EC407A;
     fill: #EC407A;
     rect {
@@ -101,6 +117,7 @@
     }
 
     text {
+        stroke: transparent;
         fill: black;
         font-weight: bold;
     }
@@ -108,13 +125,13 @@
 
 .unreachable-child-text {
     fill: black;
+    stroke: transparent;
     font-weight: bold;
 }
 
 .inactive-child {
-//    background-color: #795548;
+    stroke: #fff;
     background-color: #000;
-//    fill: #795548;
     fill: #000;
 
     rect {
@@ -123,6 +140,7 @@
     }
 
     text {
+        stroke: transparent;
         fill: white;
         font-weight: bold;
     }
@@ -130,6 +148,7 @@
 
 .inactive-child-text {
     fill: white;
+    stroke: transparent;
     font-weight: bold;
 }
 
@@ -181,4 +200,59 @@
 .status-top-label-text {
     color: white;
     font-size: 22px;
+}
+
+.receptor-status-column-heading {
+    width: 80px;
+    border-right: 1px solid #d3d3d3;
+    border-bottom: 1px solid #d3d3d3;
+}
+
+.receptor-status-row-span {
+    vertical-align: middle;
+    padding-left: 8px;
+    width: 200px;
+    height: 80px;
+    border-right: 1px solid #d3d3d3;
+    border-bottom: 1px solid #d3d3d3;
+}
+
+.in-maintenance-item {
+    background-color: #9C27B0;
+    color: white;
+}
+
+.error-item {
+    background-color: #F44336;
+    color: white;
+}
+
+.nominal-item {
+    background-color: #43A047;
+    color: white;
+}
+
+.stop-item {
+    background-color: #333333;
+    color: white;
+}
+
+.inhibited-item {
+    background-color: #ffc107 !important;
+    color: #333333  !important;
+}
+
+.in-assigned-subarray-item {
+    background-color: #43A047;
+    color: white;
+}
+
+.in-allocated-subarray-item {
+    background-color: #2196F3;
+    color: white;
+}
+
+.stow-item {
+    background-color: #01579B;
+    color: white;
 }
