fixed lock on target sensor, changed styling a bit

--- a/app/health/health.less
+++ b/app/health/health.less
@@ -206,6 +206,7 @@
     width: 80px;
     border-right: 1px solid #d3d3d3;
     border-bottom: 1px solid #d3d3d3;
+    position: relative;
 }
 
 .receptor-status-row-span {
@@ -233,7 +234,7 @@
 }
 
 .stop-item {
-    background-color: #333333;
+    background-color: #757575;
     color: white;
 }
 
@@ -243,8 +244,8 @@
 }
 
 .in-assigned-subarray-item {
-    background-color: #43A047;
-    color: white;
+    background-color: #8BC34A;
+    color: black;
 }
 
 .in-allocated-subarray-item {
@@ -254,5 +255,13 @@
 
 .stow-item {
     background-color: #01579B;
+    color: white;
+}
+
+.on-target-span {
+    font-size: 18px;
+    position: absolute;
+    left: 2px;
+    top: 2px;
     color: white;
 }
