--- a/app/operator-control/operator-control.less
+++ b/app/operator-control/operator-control.less
@@ -65,7 +65,8 @@
 
 .flash-receptor-state.receptor-stop-state {
     width: 100%;
-    background: #212121;
+    background: #757575;
+    color: white;
 }
 
 .flash-receptor-state.receptor-stow-state {
