receptor status per subarray view, updated styling for angular-material 0.9.6

--- a/app/app.less
+++ b/app/app.less
@@ -175,6 +175,11 @@ body {
 
 md-sidenav {
     background-color: inherit !important;
+    color: #757575;
+}
+
+md-list.md-dark-secondary-theme {
+    color: #CFD8DC;
 }
 
 .menu-item {
