first commit for receptor pointing display

--- a/app/app.less
+++ b/app/app.less
@@ -521,9 +521,9 @@ md-toast {
 
     md-input-container {
         padding-bottom: 0;
-        .md-input {
-            text-shadow: 0 0;
-        }
+//        .md-input {
+//            text-shadow: 0 0;
+//        }
     }
 
     md-select {
