wip - receptor pointing display

--- a/app/health/health.less
+++ b/app/health/health.less
@@ -286,12 +286,12 @@
     }
 }
 
-.actual-azel {
+.actual-pos {
     stroke: green;
     fill: green;
 }
 
-.requested-azel {
+.requested-pos {
     stroke: red;
     fill: red
 }
