wip - receptor pointing

--- a/app/health/health.less
+++ b/app/health/health.less
@@ -241,6 +241,7 @@
 .inhibited-item {
     background-color: #ffc107 !important;
     color: #333333 !important;
+    text-shadow: none !important;
 }
 
 .in-assigned-subarray-item {
@@ -304,13 +305,11 @@
 .actual-pos {
     //    stroke: green;
     //    fill: green;
-    opacity: 0.8;
+    opacity: 1.0;
 }
 
 .requested-pos {
     stroke: #333333;
-    stroke-width: 2px;
-    fill: transparent;
     opacity: 0.9;
 }
 
@@ -333,7 +332,7 @@
     span {
         color: white;
         font-weight: 600;
-        text-shadow: 2px 2px #333;
+        text-shadow: 1px 1px #333;
     }
     min-width: 60px;
     min-height: 66px;
@@ -365,7 +364,7 @@
 
 .actual-pos-border {
     stroke: #333333 !important;
-    stroke-width: 2px;
+    stroke-width: 1px;
 }
 
 .trail-circle {
