--- a/app/app.less
+++ b/app/app.less
@@ -331,7 +331,7 @@ md-sidenav {
 .slide-in-vertically-navbar.ng-hide-remove {
     max-height: 0px;
     min-height: 0px;
-    margin-bottom: 0px;
+//    margin-bottom: 0px;
     overflow: hidden;
 }
 
@@ -339,7 +339,7 @@ md-sidenav {
 .slide-in-vertically-navbar.ng-hide-add.ng-hide-add-active {
     max-height: 0px;
     min-height: 0px;
-    margin-bottom: 0px;
+//    margin-bottom: 0px;
     overflow: hidden;
 }
 
@@ -347,7 +347,7 @@ md-sidenav {
 .slide-in-vertically-navbar.ng-hide-remove.ng-hide-remove-active {
     max-height: 56px;
     min-height: 56px;
-    margin-bottom: 16px;
+//    margin-bottom: 16px;
     overflow: visible;
 }
 
