--- a/app/app.less
+++ b/app/app.less
@@ -727,3 +727,13 @@ md-option:not([selected]) {
 md-chips .md-chip {
     background: rgba(224,224,224, 0.5) !important;
 }
+
+.center-md-icon {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate3d(-49%, -36%, 0);
+    font-size: 16px;
+    color: white;
+    fill: white;
+}
