--- a/app/landing/landing.less
+++ b/app/landing/landing.less
@@ -86,6 +86,14 @@
     }
 }
 
+.glyphicon-arrow-left:before {
+    content: "\f060";
+}
+
+.glyphicon-arrow-right:before {
+    content: "\f061";
+}
+
 .glyphicon-edit:before {
     content: "\f044";
 }
