--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -267,7 +267,7 @@
 .schedule-block-script-window {
     padding: 0px;
     //    background-color: #ECEFF1;
-    height: 600px;
+//    height: 600px;
     overflow: auto;
 
     textarea {
@@ -279,6 +279,7 @@
         padding: 8px;
         border: none;
         resize: none;
+        overflow: auto;
     }
 }
 
