--- a/app/health/health.less
+++ b/app/health/health.less
@@ -375,3 +375,37 @@
     fill: transparent;
     stroke: #333;
 }
+
+.custom-health-toolbar {
+    margin-bottom: 4px;
+    margin-left: 4px;
+    padding-right: 16px;
+    max-height: 48px;
+    min-height: 48px;
+}
+
+.custom-health-hide-toolbar-button {
+    position: absolute;
+    top: 2px;
+    right: 4px;
+    z-index: 10;
+    opacity: 0.2;
+    &:hover {
+        opacity: 1.0;
+    }
+}
+
+.custom-health-hide-tree {
+    md-icon {
+        line-height: 1.5;
+        color: white;
+    }
+
+    position: absolute;
+    right: 4px;
+    margin-top: 4px;
+    max-height: 28px;
+    min-height: 28px;
+    max-width: 28px;
+    min-width: 28px;
+}
