custom health map tooltips and datastructures improvements

--- a/app/app.less
+++ b/app/app.less
@@ -746,3 +746,7 @@ md-chips .md-chip {
 .datetimepicker table tr td span.active:active, .datetimepicker table tr td span.active:hover:active, .datetimepicker table tr td span.active.disabled:active, .datetimepicker table tr td span.active.disabled:hover:active, .datetimepicker table tr td span.active.active, .datetimepicker table tr td span.active:hover.active, .datetimepicker table tr td span.active.disabled.active, .datetimepicker table tr td span.active.disabled:hover.active {
     background: rgb(63,81,181) !important;
 }
+
+.md-select-label {
+    color: inherit !important;
+}
