--- a/app/app.less
+++ b/app/app.less
@@ -752,5 +752,8 @@ md-chips .md-chip {
 }
 
 .connection-lost-bg {
-    background-color: rgba(244, 67, 54, 0.5);
+    background-color: rgba(244, 67, 54, 0.4) !important;
+}
+.connection-lost-bg-bright {
+    background-color: rgba(244, 67, 54, 1.0) !important;
 }
