added data reduction options for numeric sensors

--- a/app/sensor-graph/sensor-graph.less
+++ b/app/sensor-graph/sensor-graph.less
@@ -127,11 +127,11 @@ multi-line-chart {
 //todo, better overlay without using fixed
 .search-loading-overlay {
     background: rgba(158,158,158,0.1);
-    position: fixed;
-    left: 16px;
-    top: 287px;
-    height: 700px;
-    width: 350px;
+    position: absolute;
+    left: 0;
+    top: -20px;
+    height: 720px;
+    width: 340px;
 }
 
 .sensor-search-input {
