better graph tooltips and mouseovers

--- a/app/d3/d3.less
+++ b/app/d3/d3.less
@@ -168,3 +168,24 @@ actions-button {
     font-weight: bold;
     font-size: 14px;
 }
+
+.overlay {
+    fill: none;
+    pointer-events: all;
+}
+
+.focus-tooltip-circle {
+    fill: none;
+    stroke: steelblue;
+    stroke-width: 1px;
+    z-index: 1000;
+}
+
+.chart-tooltip {
+    background: rgba(255,255,255,0.8);
+    color: #333;
+    border: 1px solid #333;
+    box-shadow: 0 8px 17px 1px rgba(0, 0, 0, 0.2);
+    padding: 8px;
+    width: 185px;
+}
