--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -50,6 +50,8 @@
     position: relative;
     padding: 0;
     overflow: auto !important;
+    max-height: 100%;
+    min-height: 100%;
     //    background: white;
 
     input {
