wip - first commit for weather display

--- a/app/d3/d3.less
+++ b/app/d3/d3.less
@@ -189,3 +189,14 @@ actions-button {
     padding: 8px;
     width: 185px;
 }
+
+.wind-direction-path {
+    stroke: #333;
+    stroke-width: 2px;
+}
+
+.y-axis-opacity {
+    path {
+        opacity: 0.5;
+    }
+}
