wip - cam and component build and version information

--- a/app/app.less
+++ b/app/app.less
@@ -19,6 +19,7 @@
 @import "health/health";
 @import "d3/d3";
 @import "sensor-list/sensor-list";
+@import "process-control/process-control";
 /* Add Component LESS Above */
 
 @button-background-gradient: linear-gradient(to bottom, #79a3c9 0%, #4772a0 100%);
@@ -665,6 +666,10 @@ md-toast {
 
 .green-color {
     color: #4CAF50;
+}
+
+.red-color {
+    color: #F44336;
 }
 
 .mainbar-navbar-button {
