--- a/app/process-control/process-control.less
+++ b/app/process-control/process-control.less
@@ -1,6 +1,14 @@
 .process-control-container {
     overflow: hidden;
     border-bottom: 1px solid rgba(215, 215, 215, 0.5);
+    position: relative;
+    button {
+        max-width: 32px;
+        min-width: 32px;
+        max-height: 32px;
+        min-height: 32px;
+        margin: 0;
+    }
 }
 
 .process-control-bg-transition {
