re-added version display as cam components

--- a/app/app.less
+++ b/app/app.less
@@ -20,6 +20,7 @@
 @import "d3/d3";
 @import "sensor-list/sensor-list";
 @import "process-control/process-control";
+@import "cam-components/cam-components";
 /* Add Component LESS Above */
 
 @button-background-gradient: linear-gradient(to bottom, #79a3c9 0%, #4772a0 100%);
