added collapse all and expand all buttons

--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -534,6 +534,13 @@
 }
 
 .inline-action-button {
+    min-width: 32px;
     max-width: 32px;
     max-height: 32px;
+    min-height: 32px;
+}
+
+.no-margin-no-padding {
+    margin: 0;
+    padding: 0;
 }
