changed first resolve for roboto font

--- a/app/app.less
+++ b/app/app.less
@@ -46,8 +46,8 @@
 
 @font-face {
     font-family: 'Roboto';
-    src: url('fonts/Roboto/Roboto-Regular.ttf') @ttf,
-    url('../fonts/Roboto/Roboto-Regular.ttf') @ttf;
+    src: url('../fonts/Roboto/Roboto-Regular.ttf') @ttf,
+    url('fonts/Roboto/Roboto-Regular.ttf') @ttf;
 }
 
 .rb {
@@ -56,8 +56,8 @@
 
 @font-face {
     font-family: 'Roboto Black';
-    src: url('fonts/Roboto/Roboto-Black.ttf') @ttf,
-    url('../fonts/Roboto/Roboto-Black.ttf') @ttf;
+    src: url('../fonts/Roboto/Roboto-Black.ttf') @ttf,
+    url('fonts/Roboto/Roboto-Black.ttf') @ttf;
 }
 
 .rbB {
@@ -66,8 +66,8 @@
 
 @font-face {
     font-family: 'Roboto Light';
-    src: url('fonts/Roboto/Roboto-Light.ttf') @ttf,
-    url('../fonts/Roboto/Roboto-Light.ttf') @ttf;
+    src: url('../fonts/Roboto/Roboto-Light.ttf') @ttf,
+    url('fonts/Roboto/Roboto-Light.ttf') @ttf;
 }
 
 /* Required for Angular UI Bootstrap */
@@ -146,7 +146,7 @@ div[role="button"] {
 }
 
 body {
-    font-family: Roboto !important;
+    font-family: Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif !important;
     min-width: @app-min-width;
     padding: 0 !important;
     overflow: hidden;
