various alarm styling and layout fixes, show aggregate rules on health display

--- a/app/alarms/alarms.less
+++ b/app/alarms/alarms.less
@@ -201,6 +201,7 @@ ul {
     overflow: auto;
 
     .alarms-list-item-content {
+        margin-top: 2px;
         padding: 2px;
         cursor: pointer;
     }
@@ -285,7 +286,7 @@ ul {
 }
 
 .alarm-row-item {
-    border-bottom: 1px solid #424242;
+    border-bottom: 1px solid #d7d7d7;
     padding-left: 4px;
     padding-right: 4px;
     height: 32px;
