--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -45,14 +45,11 @@
 }
 
 .schedule-draft-data-list {
-    //    direction: rtl;
     z-index: 0;
     position: relative;
     padding: 0;
     overflow: auto !important;
-    max-height: 100%;
     min-height: 100%;
-    //    background: white;
 
     input {
         width: 100%;
@@ -447,9 +444,9 @@
 }
 
 .subarray-container {
-    //    min-width: 1000px;
     margin-bottom: 8px;
     min-height: 200px;
+    max-height: 550px;
 }
 
 .subarray-state-toolbar {
