list config files and file contents for instrumental config

--- a/app/app.less
+++ b/app/app.less
@@ -21,6 +21,7 @@
 @import "sensor-list/sensor-list";
 @import "process-control/process-control";
 @import "cam-components/cam-components";
+@import "instrumental-config/instrumental-config";
 /* Add Component LESS Above */
 
 @button-background-gradient: linear-gradient(to bottom, #79a3c9 0%, #4772a0 100%);
