--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -531,6 +531,7 @@
 }
 
 .inline-action-button {
+    line-height: 42px !important;
     min-width: 32px;
     max-width: 32px;
     max-height: 32px;
