reworked control service to use new katportal http endpoints and not a websocket connection

--- a/app/alarms/alarms.less
+++ b/app/alarms/alarms.less
@@ -102,6 +102,10 @@
     color: @textColor;
 }
 
+.alarm-critical {
+    .alarm-styles(@alarm-critical-bg, white);
+}
+
 .alarm-info {
     .alarm-styles(@alarm-info-bg, white);
 }
