wip - reworking obs sched to use sensors and http endpoints

--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -258,13 +258,18 @@
     box-shadow: 0px 2px 40px 0 #000;
 }
 
+.highlight-script-border-bottom {
+    border-bottom: 16px solid #B3E5FC !important;
+    margin-bottom: 0 !important;
+}
+
 .script-window-without-box-shadow {
     border: 16px solid transparent;
     box-shadow: none;
 }
 
 .schedule-block-script-window {
-    padding: 0px;
+    padding: 0;
     //    background-color: #ECEFF1;
 //    height: 600px;
     overflow: auto;
@@ -284,7 +289,7 @@
 
 .schedule-block-resource-window {
     height: 400px;
-    padding: 0px;
+    padding: 0;
     //    background-color: white;
 }
 
