--- a/app/video/video.less
+++ b/app/video/video.less
@@ -8,3 +8,9 @@
     margin-right: 18px;
     margin-bottom: 18px;
 }
+
+.video-position-controls {
+    .md-button.md-icon-button {
+        margin: 2px;
+    }
+}
