--- a/app/app.less
+++ b/app/app.less
@@ -91,25 +91,20 @@ div[role="button"] {
 
 .toolbar-collapse-button {
     position: absolute;
-    top: 0px;
-    left: 50%;
-    width: 46px;
-    height: 32px;
-    margin-left: auto;
-    margin-right: auto;
-    color: rgba(255, 255, 255, 0.5);
-    cursor: pointer;
+    top: 0;
+    left: 0;
+    width: 100%;
+    cursor: pointer !important;
     border: 0;
     background: none;
     z-index: 1000;
-    font-size: 16px;
     text-align: center;
+    color: white;
+    font-size: 12px;
 
     &:hover {
-        color: rgba(227, 227, 227, 0.8);
-        background-color: rgba(255, 255, 255, 0.2);
-        font-size: 24px;
-        margin-top: -5px;
+        color: white;
+        background: rgba(80, 80, 80, 0.3);
     }
 
     &:focus {
