--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -547,3 +547,15 @@
     margin: 0;
     padding: 0;
 }
+
+.config-label-list-item {
+    min-width: 100px;
+    min-height: 22px;
+    max-height: 22px;
+    cursor: pointer !important;
+    padding: 2px 8px;
+
+    &:hover {
+        background-color: rgba(215, 215, 215, 0.3);
+    }
+}
