--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -205,7 +205,7 @@
 }
 
 .schedule-row-executing {
-    background: #4CAF50 !important;
+    background: rgba(78, 175, 80, 0.6) !important;
     color: #333333;
     .manual-color {
         color: #1565C0;
@@ -213,7 +213,7 @@
 }
 
 .schedule-row-executing-and-selected {
-    background: linear-gradient(to right, rgba(78, 175, 80, 1) 0%, rgba(78, 175, 80, 1) 50%, rgba(179, 229, 252, 0.8) 50%, rgba(179, 229, 252, 1) 100%);
+    background:  rgba(78, 175, 80, 0.6);
     box-shadow: 1px 2px 10px 0 #393939;
     border-bottom: 1px solid transparent;
     color: #333333;
