--- a/app/video/video.less
+++ b/app/video/video.less
@@ -1,10 +1,7 @@
 .video-pan-controls {
     position: absolute;
-    bottom: 0;
+    bottom: 40px;
     right: 0;
-//    width: 200px;
-//    height: 200px;
-//    font-weight: bold;
     margin-right: 18px;
     margin-bottom: 18px;
 }
