getting windstow parameters from katconf_ws, minor improvements to weather display and graphing

--- a/app/d3/d3.less
+++ b/app/d3/d3.less
@@ -184,7 +184,7 @@ actions-button {
 
 .chart-tooltip {
     background: rgba(255,255,255,0.8);
-    color: #333;
+//    color: #333;
     border: 1px solid #333;
     box-shadow: 0 8px 17px 1px rgba(0, 0, 0, 0.2);
     padding: 8px;
