added device status display

--- a/app/app.less
+++ b/app/app.less
@@ -21,6 +21,7 @@
 @import "sensor-list/sensor-list";
 @import "process-control/process-control";
 @import "cam-components/cam-components";
+@import "device-status/device-status";
 @import "instrumental-config/instrumental-config";
 /* Add Component LESS Above */
 
@@ -101,6 +102,7 @@ div[role="button"] {
     text-align: center;
     color: white;
     font-size: 12px;
+    height: 17px;
 
     &:hover {
         color: white;
