show circular progress bar while activating a subarray

--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -580,3 +580,14 @@
         transform: translate(-150px, -90px);
     }
 }
+
+.overlay-progress-circular {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background: rgba(81, 81, 81, 0.25);
+    cursor: not-allowed;
+    z-index: 100;
+}
