pretty print json for schedule blocks

--- a/app/app.less
+++ b/app/app.less
@@ -742,3 +742,19 @@ md-chips .md-chip {
 .connection-lost-bg-bright {
     background-color: rgba(244, 67, 54, 1.0) !important;
 }
+
+.json-key {
+    color: brown;
+}
+.json-value {
+    color: navy;
+}
+.json-string {
+    color: olive;
+}
+
+pre {
+    height: 100%;
+    background: transparent;
+    border: none;
+}
