set preset and goto preset for vds, displaying current pan + tilt, resizeable image

--- a/app/app.less
+++ b/app/app.less
@@ -86,9 +86,9 @@
     transition: all 0.1s cubic-bezier(0.55, 0, 0.55, 0.2);
 }
 
-div[role="button"] {
-    cursor: auto;
-}
+//div[role="button"] {
+//    cursor: auto;
+//}
 
 .toolbar-collapse-button {
     position: absolute;
