--- a/app/sensor-list/sensor-list.less
+++ b/app/sensor-list/sensor-list.less
@@ -104,8 +104,8 @@
 
 .resize-grip {
     position: absolute;
-    right: 0px;
-    bottom: 0px;
+    right: 0;
+    bottom: 0;
     cursor: nwse-resize;
     width: 16px;
     height: 16px;
@@ -120,7 +120,7 @@
 }
 
 .sensor-list-graph-options-menu {
-    right: 0px;
+    right: 0;
     top: 46px;
     position: absolute;
     z-index: 1000;
