moved floodlights toggle button to video display

--- a/app/video/video.less
+++ b/app/video/video.less
@@ -8,3 +8,13 @@
         margin: 2px;
     }
 }
+
+.floodlights-button {
+    position: absolute;
+    right: 8px;
+    top: 8px;
+    opacity: 0.25;
+    &:hover {
+        opacity: 1.0;
+    }
+}
