numerous userlog styling fixes

--- a/app/app.less
+++ b/app/app.less
@@ -23,6 +23,7 @@
 @import "cam-components/cam-components";
 @import "device-status/device-status";
 @import "instrumental-config/instrumental-config";
+@import "userlogs/userlogs";
 /* Add Component LESS Above */
 
 @button-background-gradient: linear-gradient(to bottom, #79a3c9 0%, #4772a0 100%);
