wip assign control authority per user per subarray

--- a/app/admin/admin.less
+++ b/app/admin/admin.less
@@ -47,8 +47,8 @@ md-select.md-default-theme[disabled] .md-select-label {
 }
 
 .user-editing-buttons {
-    max-width: 150px;
-    min-width: 150px;
+//    max-width: 150px;
+//    min-width: 150px;
     float: right;
 }
 
