--- a/app/admin/admin.less
+++ b/app/admin/admin.less
@@ -91,5 +91,11 @@ md-select.md-default-theme[disabled] .md-select-label {
     border-top: 0;
     border-left: 0;
     border-right: 0;
-    border-bottom: 1px solid currentColor;
+//    border-bottom: 1px solid currentColor;
+}
+
+.opaque-disabled-select {
+    span {
+        color: currentColor !important;
+    }
 }
