reworked navigation widget, added bottom toolbar, added LO and interlock displays

--- a/app/app.less
+++ b/app/app.less
@@ -758,3 +758,11 @@ pre {
     background: transparent;
     border: none;
 }
+
+.main-footer-toolbar {
+    font-size: 16px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
