--- a/app/d3/d3.less
+++ b/app/d3/d3.less
@@ -61,6 +61,22 @@ rect.parent,
     top: 0;
 }
 
+.navigation-tooltip {
+    color: #333333;
+    word-wrap: break-word;
+    max-width: 290px;
+    max-height: 225px;
+    position: absolute;
+    border: 1px solid;
+    pointer-events: none;
+    margin: 10px;
+    padding: 6px;
+    opacity: 0.9;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+}
+
 text.parent {
     font-weight: bold;
     font-size: 22px;
