--- a/app/widgets/navigation/navigation-widget.less
+++ b/app/widgets/navigation/navigation-widget.less
@@ -10,3 +10,17 @@
         margin-bottom: 10px;
     }
 }
+
+.pie-button-path {
+    stroke-width: 2;
+    opacity: 1.0;
+    cursor: pointer;
+    &:hover {
+        opacity: 0.8;
+    }
+}
+
+.pie-button-text {
+    text-anchor: middle;
+    text-transform: uppercase;
+}
